<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/btnShowAll"
        android:layout_width="284dp"
        android:layout_height="70dp"
        android:layout_marginStart="68dp"
        android:layout_marginTop="146dp"
        android:text="@string/show"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnFav"
        android:layout_width="294dp"
        android:layout_height="66dp"
        android:layout_marginStart="68dp"
        android:layout_marginTop="26dp"
        android:text="@string/showFav"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnShowAll" />

    <Button
        android:id="@+id/btnExit"
        android:layout_width="300dp"
        android:layout_height="70dp"
        android:layout_marginStart="68dp"
        android:layout_marginTop="32dp"
        android:text="@string/exit"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnFav" />

</androidx.constraintlayout.widget.ConstraintLayout>